--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ project(hrdata)
 
 add_library(hrdata src/lexer.cpp src/node.cpp src/parser.cpp src/token.cpp src/hrdata.cpp src/types.cpp)
 
-target_compile_options(hrdata PRIVATE -std=c++98 -rdynamic -W -Wextra -Werror -Wall -Wl,--no-undefined -fpermissive)
+if(${CMAKE_CXX_COMPILER_ID} MATCHES GNU)
+	target_compile_options(hrdata PRIVATE -std=c++98 -rdynamic -W -Wextra -Werror -Wall -Wl,--no-undefined -fpermissive)
+else(${CMAKE_CXX_COMPILER_ID} MATCHES GNU)
+	target_compile_options(hrdata PRIVATE -std=c++98)
+endif(${CMAKE_CXX_COMPILER_ID} MATCHES GNU)
 
 target_include_directories(hrdata PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> # hardcoded for build
